--- a/src/styles/components/Header.css
+++ b/src/styles/components/Header.css
@@ -25,6 +25,7 @@
 .profileContainer {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 
